Elimine archivos e hice la estructura basica de los componentes

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+}
+
+:root {
+  --main-white: #f0f0f0;
+  --main-gray: #303841;
+  --main-red: #be3144;
+}
+
+body {
+  background-color: var(--main-gray);
+  color: var(--main-white);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
